<resources>
    <string name="app_name">KerklyT V2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Ordenes Pendientes</string>
    <string name="menu_gallery">Clientes</string>
    <string name="menu_slideshow">Trabajos Pendientes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="klerkly">Kerkly</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="iniciar">Iniciar</string>
    <string name="crear">Crear cuenta</string>
    <string name="olvidarContrasenia"><u>¿Olvidaste la contraseña?</u></string>
    <string name="pruebaSinRegistro">Prueba sin registro</string>
    <string name="title_activity_solicitar_servicio">SolicitarServicio</string>

    <string name="bienvenido">¡Bienvenido!</string>
    <string name="servicio">Presupuestar</string>
    <string name="escribirProblematica">Escriba su problemática</string>
    <string name="direccion">Dirección</string>
    <string name="servicio_express">Servicio Expréss</string>
    <string name="pago">Pago</string>
    <string name="cuentaUsuario">Nombre de usuario</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="contratos">Contratos</string>
    <string name="ayuda">Ayuda</string>
    <string name="politica_privacidad">Política de privacidad</string>
    <string name="total">Total a pagar</string>
    <string name="nombreTitular">Nombre del titular</string>
    <string name="numeroTarjeta">Número de tarjeta</string>
    <string name="CCV">CCV</string>
    <string name="MM">MM</string>
    <string name="AA">AA</string>
    <string name="descargar">Descargar</string>
    <string name="pagarAhora">Pagar ahora</string>
    <string name="contrato">Contrato</string>
    <string name="intento">Intento 01</string>
    <string name="folio"><b>Folio:</b> 0118</string>
    <string name="horaContrato">09:48 AM</string>
    <string name="lugarFecha">En <u>Chilpancingo</u> a <u>03</u> de <u>Julio</u> del <u>2021</u> </string>
    <string name="cupertoContrato">El solicitante <u>Juan Hernández Ruíz</u> pagó la cantidad de <u>Mil Quinientos pesos 00/100 ($1,500.00 MXN)</u>,
    por la contratación del servicio de <u>plomería</u> bajo el cargo de <u>Pablo López García</u> en la dirección registrada.</string>
    <string name="formaPago">Forma de pago por tarjeta de débito.</string>
    <string name="atteContrato"><u>Equipo KERKLY</u></string>
    <string name="bienvenida_kerkly">Bienvenida a KERKLY</string>
    <string name="cuenta_creada">Tu cuenta ha sido creada con éxito</string>
    <string name="contrania_modificada">Su contraseña ha sido modificada</string>
    <string name="descargar_necesita_cuenta">Para descargar el recibo necesita crear una cuenta</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="visualizar_contrato">Para visualizar un contrato necesita crearse una cuenta</string>
    <string name="cerrar_sesionConfirmacion">¿Estás seguro que quieres cerrar sesión?</string>
    <string name="descarga_exito">Su descarga ha sido completada con éxito</string>
    <string name="title_activity_interfaz_kerkly">InterfazKerkly</string>
    <string name="Contactos">Contactos</string>
    <string name="agenda">Trabajos pendientes</string>
    <string name="introducirEvento">Introduce el evento</string>
    <string name="descripcion">Descripción</string>
    <string name="guardar">Guardar</string>
    <string name="campoRequerico">Campo Requerido</string>
    <string name="telefonoNoValido">Formato de teléfono no válido</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="presupuestos">Presupuestos</string>
    <string name="historial">Historial</string>
    <string name="telefono">Teléfono</string>
    <string name="correo">Correo</string>
    <string name="presupuesto">Presupuesto</string>
    <string name="concepto_servicio">Concepto del servicio</string>
    <string name="precio_servicio">Precio del servicio</string>
    <string name="precio">Precio</string>
    <string name="agregar">Agregar</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="generarPDF">Generar PDF</string>
    <string name="clave">Clave</string>
    <string name="total_presupuesto">Total: $0</string>
    <string name="servicioUrgente">Servicios urgentes</string>
    <string name="servicioNormal">Servicios no urgentes</string>
    <string name="detalles_trabajo_pendiente">Detalles del trabajo pendiente</string>
    <string name="cliente">Cliente</string>
    <string name="problematica">Problematica</string>
    <string name="fecha_inicio">Fecha de inicio</string>
    <string name="fecha_final">Fecha final</string>
    <string name="hora_final">Hora final</string>
    <string name="hora_inicio">Hora de inicio</string>
    <string name="historial_urgente">Historial de trabajos urgentes</string>
    <string name="historial_normal">Historial de trabajos</string>
    <string name="mensaje">Mensaje</string>
    <string name="ubicacion">Ubicación</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="listaa_vacia_historial_normal">No tiene servicios realziados en su historial</string>
    <string name="lista_vacia_trabajosPendientes">No tiene trabajos por realizar</string>
    <string name="lista_vacia_presupuestos">No tiene presupuestos pendientes</string>
    <string name="solicitudes">Solicitudes de clientes</string>
    <string name="ir_a_mis_so">Ir a mis solicitudes</string>
    <string name="flitrar_sol">Flitrar solicitudes por oficio</string>
    <string name="AceptarServicio">Aceptar Servicio</string>
    <string name="CancelarServicio">Rechazar Servicio</string>

    <string name="cerrar_app">Cerrar aplicación</string>
    <string name="mensaje_alertaCerrarApp">¿Seguro que quiere cerrar la aplicación?</string>
    <string name="confirmar_alertCerrarApp">Confirmar</string>
    <string name="cancelar_alertCerrarApp">Cancelar</string>
    <string name="dialogAceptarServicio_txt1">Teniendo la informacion de la ubicacion, ¿Desea Aceptar es Servicio?</string>
    <string name="dialogAceptarServicio_txt2">Si aceptas el servicio se te asignara a tu lista.</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="dialogRechazarServicio_txt1">¿Seguro que deseas Rechazar el servicio?</string>

    <string name="activitySeguimiento_txt1">Se ha notificado al cliente que acepto el servicio, informa al cliente sobre el horarios de llegada al servicio a travez del chat</string>
    <string name="activitySeguimiento_btn1">Iniciar Chat con el cliente</string>
    <string name="default_notification_channel_id">Mi_ID_Chanel</string>

    <string name="servicioClienteNR">Servicios de clientes No Registrados</string>
    <string name="txt1_seguimiento">Se ha notificado al cliente que acepto el servicio, informa al cliente sobre el horarios de llegada al servicio a travez del chat</string>
    <string name="txt1.1_seguimiento">Seguimiento del servicio</string>
    <string name="btn1_seguimiento">Chat  con el cliente</string>
    <string name="txt2_seguimiento">¿Puedes realizar el servicio ahora? Comienza el servicio para enviar tu ubicacion en tiempo real al cliente</string>
    <string name="btn2_seguimiento">Voy en camino</string>
    <string name="btn3_seguimiento">Finalizar trabajo</string>
    <string name="txt3_seguimiento">Para finalizar el trabajo, ingrese la fecha y hora de inico y fin del trabajo </string>

    <string name="btn_mas_info">Mas Informacion </string>
    <string name="txt_mensaje_Notificacion_1">Su solicitud ha sido Aceptada, Por favor espere un momento... </string>
    <string name="txt_mensaje_Notificacion_normal1">En un momento se le atendera. Num. Folio:</string>
    <string name="txt_mensaje_Notificacion_normal1.2">Gracias por su confianza</string>

</resources>