<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_group"
        android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_vector__8_"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_vector__9_"
            android:title="@string/menu_slideshow" />


        <item
            android:id="@+id/pendiente"
            android:icon="@drawable/ic_vector__10_"
            android:title="@string/historial" />


        <item
            android:id="@+id/cerrar_sesion_nav"
            android:icon="@drawable/ic_cerrar_sesion"
            android:title="@string/cerrarSesion" />
    </group>
</menu>