<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/fondo_emergentes"
    android:padding="15dp"
    android:layout_gravity="center">


    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/modificar" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="start"
        android:layout_height="wrap_content"
        android:text="@string/concepto_servicio" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutConceptoEmergente"
        android:layout_width="match_parent"
        app:errorEnabled="true"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_concpetoEmergente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion"
            android:inputType="textMultiLine"
            tools:ignore="TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="start"
        android:layout_height="wrap_content"
        android:text="@string/precio_servicio" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPrecioEmergente"
        android:layout_width="match_parent"
        app:errorEnabled="true"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_PrecioEmergente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/precio"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/fondo_botones_2"
        android:text="@string/guardar"
        android:onClick="guardar"
        android:gravity="center"
        android:textColor="@color/white"
        app:backgroundTint="@color/color_botonAzul"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</LinearLayout>