<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presupuesto"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/presupuesto"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/total_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:text="@string/total_presupuesto"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="10dp"
        android:background="@color/fondoPresupuesto"
        android:orientation="vertical">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/concepto_servicio"
                        android:layout_marginTop="3dp"
                        android:layout_marginStart="7dp"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_concepto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="7dp"
                        android:layout_marginStart="7dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_concepto"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/descripcion"
                            android:inputType="textMultiLine"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/precio_servicio"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="7dp"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_pago"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:layout_marginEnd="7dp"
                        android:layout_marginTop="5dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_pago"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:hint="@string/precio"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="10dp">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_ubicacion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/fondo_botones"
                            android:text="@string/ubicacion"
                            android:textColor="@color/black"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/materialButton3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="15dp"
                            android:background="@drawable/fondo_botones"
                            android:onClick="save"
                            android:text="@string/agregar"
                            android:textColor="@color/black"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="SpeakableTextPresentCheck">

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fillViewport="true"
                        android:orientation="vertical">

                        <TableLayout
                            android:id="@+id/table"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent" />

                    </HorizontalScrollView>
                </ScrollView>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/materialButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/fondo_botones"
                        android:text="@string/eliminar"
                        android:onClick="delete"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toStartOf="@+id/materialButton2"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/materialButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/fondo_botones"
                        android:text="@string/modificar"
                        android:onClick="update"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutEdcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:layout_marginStart="7dp"
                    android:layout_marginEnd="7dp"
                    android:layout_marginTop="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editEdicion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:hint="@string/clave"
                        />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/generarRecibo_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="7dp"
        android:layout_marginStart="7dp"
        android:background="@drawable/fondo_botones"
        android:text="@string/generarPDF"
        android:textColor="@color/black"
        android:layout_gravity="center"
        app:iconGravity="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:icon="@drawable/ic_vscode_icons_file_type_pdf"
        app:iconTintMode="multiply"
        />

</LinearLayout>