<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/presupuestos"
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_margin="10dp"/>

    <View
        android:id="@+id/image_12"
        android:layout_width="133dp"
        android:layout_height="140.2dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/image_12"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flitrar_sol"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:id="@+id/flitrar_sol"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="Seleccionar Oficio"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
        <AutoCompleteTextView
            android:id="@+id/filtro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_presupuesto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"/>


    <ImageView
        android:id="@+id/img_presupuesto_normal"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/imagen_lista_vacia" />

    <TextView
        android:id="@+id/txt_presupuesto_normal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/lista_vacia_trabajosPendientes"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_gravity="center"
        android:lines="2"
        android:textSize="20sp"
        />
</LinearLayout>